gcc/testsuite/rust/rustc/ui/super-at-top-level.rs
use super::f; // { dg-error ".E0433." "" { target *-*-* } }

fn main() {
}

